<resources>
    <string name="app_name">Kalkulator-Nilai-MataKuliah</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_for_you">Untuk Anda</string>
    <string name="urutkan_nama">Urutkan berdasarkan Nama</string>
    <string name="urutkan_nim">Urutkan berdasarkan NIM</string>
    <string name="urutkan_nilai">Urutkan berdasarkan Nilai</string>
    <string name="daftar_lulus">Daftar Mahasiswa/i yang Lulus</string>
    <string name="sepuluh_besar">Daftar 10 besar Mahasiswa/i</string>
    <string name="hapus_semua_data">Hapus SEMUA data</string>
    <string name="selamat_datang">Selamat datang,</string>
    <string name="di_aplikasi_perhitungan_nilai_matakuliah">Di aplikasi perhitungan nilai MataKuliah</string>
    <string name="mulailah_mengevaluasi_nilai_matakuliah_perkuliahanmu_sekarang">Mulailah Mengevaluasi nilai MataKuliah perkuliahanmu sekarang</string>
    <string name="mulai_menghitung_nilai">Mulai Menghitung Nilai</string>
    <string name="nama">Nama Mahasiswa/i</string>
    <string name="nim">NIM Mahasiswa/i</string>
    <string name="kelas">Kelas Mahasiswa/i</string>
    <string name="nilai_t">Total Nilai Tugas [10%]:</string>
    <string name="nilai_a1">Total Nilai Assessment 1 [15%]:</string>
    <string name="nilai_a2">Total Nilai Assessment 2 [20%]:</string>
    <string name="nilai_a3">Total Nilai Assessment 3 [25%]:</string>
    <string name="nilai_p">Total Nilai Praktikum [30%]:</string>
    <string name="presensi">Total Presensi (dalam %):</string>
    <string name="hitung">Hitung</string>
    <string name="reset">Reset</string>
    <string name="nilai_sementara">Nilai Sementara</string>
    <string name="indeks_sementara">Indeks Sementara</string>
    <string name="kuliah_selesai">Kuliah sudah berakhir?</string>
    <string name="perintah_edit">Perintah Edit:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="nilai">Nilai</string>
    <string name="indeks">Indeks</string>
    <string name="zero">0.00</string>
    <string name="nilai_akhir">Nilai Akhir</string>
    <string name="indeks_akhir">Indeks Akhir</string>
    <string name="status_kelulusan">Status Kelulusan</string>
    <string name="title_nama">Nama:</string>
    <string name="title_nim">NIM:</string>
    <string name="title_kelas">Kelas:</string>
    <string name="selamat_anda_memiliki">Selamat anda memiliki,</string>
    <string name="tingkatkan_dan_pertahankan_prestasi_belajar_anda_sebagai_wadah_ilmu_yang_bermanfaat">Tingkatkan dan pertahankan prestasi belajar anda sebagai wadah ilmu yang bermanfaat</string>
    <string name="nilai_baik">Nilai \'BAIK\'</string>
    <string name="mantap_nilai_indeks_andra_termasuk_nilai_yang_baiik_pertahankan_dan_tingkatkan_belajar_yang_baik">Mantap nilai indeks andra termasuk nilai yang baiik pertahankan dan tingkatkan belajar yang \'BAIK\'</string>
    <string name="nilai_cukup_baik">Nilai \'CUKUP BAIK \'</string>
    <string name="dalam_prestasi_anda_cukup_baik_tingkatan_latihan_dan_sering_implementasikan_materi_yang_diajarkan_agar_bisa_mendapatkan_nilai_yang_sangat_baik">Dalam prestasi anda cukup baik tingkatan latihan dan sering implementasikan materi yang diajarkan agar bisa mendapatkan nilai yang \'SANGAT BAIK \'</string>
    <string name="nilai_indeks_anda_sudah_cukup_atau_pas_pasan_namun_anda_bisa_kembangkan_dengan_rajin_melakukan_latihan_dan_belajar_agara_nilai_nya_memuaskan">Nilai indeks anda sudah cukup atau pas pasan namun anda bisa kembangkan dengan rajin melakukan latihan dan belajar agara nilai nya \'MEMUASKAN\'</string>
    <string name="nilai_kurangbaik">Nilai \'KURANGBAIK\'</string>
    <string name="maaf_sekali_anda_nampaknya_nilainya_kurang_baik_dari_standar_maka_anda_harus_lebih_sering_tingkatkan_waktu_belajar_anda">Maaf sekali anda nampaknya nilainya kurang baik dari standar maka anda harus lebih sering tingkatkan waktu belajar anda</string>
    <string name="indeks_anda_nampaknya_kurang_memuaskan_dan_harus_mengulang_di_semester_depan_untuk_kedepanya_anda_harus_lebih_giat_belajar_lagi">Indeks anda nampaknya kurang memuaskan dan harus mengulang di semester depan , untuk kedepanya anda harus lebih giat belajar lagi</string>
    <string name="nilai_tidakbaik">Nilai \'TIDAKBAIK\'</string>
    <string name="mohon_maaf_harusnya_indeks_nilai_anda_pada_saat_ini_harus_jadi_evaluasi_bagi_anda_agar_bisa_memperbaikinya_dan_anda_harus_mengulang_di_semester_depan_semangat_ya">Mohon maaf harusnya indeks nilai anda pada saat ini harus jadi evaluasi bagi anda agar bisa memperbaikinya dan anda harus mengulang di semester depan \'SEMANGAT YA !!!\'</string>
    <string name="nilai_sangat_baik">Nilai \'SANGAT BAIK\'</string>
    <string name="nilai_cukupbaik">Nilai \'CUKUPBAIK\'</string>
    <string name="nilai_cukup">Nilai \'CUKUP\'</string>
    <string name="nilai_mengulang">Nilai \'MENGULANG\'</string>
    <string name="ini_nilai_yang_sangat_baik">Ini nilai yang sangat baik</string>
    <string name="ini_nilai_yang_baik">ini nilai yang baik</string>
    <string name="ini_nilai_sudah_cukup_baiik">ini nilai sudah cukup baiik</string>
    <string name="ini_nilai_sudah_cukup">ini nilai sudah cukup</string>
    <string name="ini_nilai_kurang_baik">ini nilai kurang baik</string>
    <string name="ini_nilai_tidak_baik">ini nilai tidak baik</string>
    <string name="ini_adalah_pelajaran_karena_anda_harus_mengulang_dan_nilai_kurang_baik">ini adalah pelajaran karena anda harus mengulang dan nilai kurang baik</string>
    <string name="dark_mode">Nyalakan/Matikan Dark Mode</string>
    <string name="selamat_datangg">Selamat datang</string>
    <string name="di_aplikasi_perhitungan_nilai_mata_kuliah">Di aplikasi perhitungan nilai mata kuliah</string>
    <string name="untuk_anda">Untuk Anda</string>
    <string name="mulailah_mengevaluasi_nilai_matakuliah_perkuliahanmu_sekarangg">mulailah_mengevaluasi_nilai_matakuliah_perkuliahanmu_sekarang</string>
    <string name="mulai_menghitung_nilaii">Mulai menghitung nilai</string>
    <string name="nama_mahasiswa">Nama Mahasiswa</string>
    <string name="nim_mahasiswa">NIM Mahasiswa</string>
    <string name="kelas_mahasiswa">Kelas Mahasiswa</string>
    <string name="total_nilai_tugas">Total Nilai Tugas</string>
    <string name="total_nilai_assesment_1">Total Nilai Assesment 1</string>
    <string name="total_nilai_assesment_2">Total Nilai Assesment 2</string>
    <string name="total_nilai_assesment_3">Total Nilai Assesment 3</string>
    <string name="total_nilai_praktikum">Total Nilai Praktikum</string>
    <string name="total_presensi">Total Presensi</string>
    <string name="hitung_nilai">Hitung Nilai</string>
    <string name="reset_nilai">Reset Nilai</string>
    <string name="hasil_nilai">Hasil Nilai</string>
    <string name="hasil_indeks">Hasil indeks</string>
    <string name="selamat_anda_memiliiki">Selamat anda memiliki</string>
    <string name="nilai_baikk">Nilai baik</string>
    <string name="mantap_nilai_indeks_anda_termasuk_nilai_yang_baiik_pertahankan_dan_tingkatkan_belajar_yang_baik">mantap nilai indeks anda termasuk nilai yang baiik pertahankan dan tingkatkan belajar yang baik</string>
    <string name="nilai_cukupp">Nilai Cukup</string>
    <string name="nilai_indeks_anda_sudah_cukup_atau_pas_pasan_namun_anda_bisa_kembangkan_dengan_rajin_melakukan_latihan_dan_belajar_agar_nilai_nya_memuaskan">nilai indeks anda sudah cukup atau pas pasan namun anda bisa kembangkan dengan rajin melakukan latihan dan belajar agar nilai nya memuaskan</string>
    <string name="dalam_prestasi_anda_cukup_baik_tingkatan_latihan_dan_sering_implementasikan_materi_yang_diajarkan_agar_bisa_mendapatkan_nilai_yang_sangat_baikk">dalam prestasi anda cukup baik tingkatan latihan dan sering implementasikan materi yang diajarkan agar bisa mendapatkan nilai yang sangat baik</string>
</resources>
