<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BaikFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/Imgve_baik"
            android:layout_width="257dp"
            android:layout_height="265dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintVertical_bias="0.19999999"
            app:srcCompat="@drawable/baik"
            android:contentDescription="@string/ini_nilai_yang_baik" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/main_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_apps_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_identity"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_rounded_card_blue"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/tv_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/selamat_anda_memiliiki"
                    android:text="@string/selamat_anda_memiliki"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_baik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nilai_baik"
                    android:contentDescription="@string/nilai_baikk"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/main_label_for_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_apps_identity"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/label_for_you"
                android:contentDescription="Untuk Anda"
                android:textSize="20sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/main_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_label_for_you"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tv_baikk"
            android:layout_width="309dp"
            android:layout_height="62dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription=""
            android:text="@string/mantap_nilai_indeks_anda_termasuk_nilai_yang_baiik_pertahankan_dan_tingkatkan_belajar_yang_baik"
            android:textColor="@color/colorTextHeader"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Imgve_baik"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>