<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CukupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/Img_cukup"
            android:layout_width="257dp"
            android:layout_height="265dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:srcCompat="@drawable/cukup"
            tools:layout_editor_absoluteY="306dp"
            android:contentDescription="@string/ini_nilai_sudah_cukup" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/main_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_apps_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_identity"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_rounded_card_blue"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/tv_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selamat_anda_memiliki"
                    android:textColor="@color/colorText"
                    android:contentDescription="Selamat anda memiliki"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_cukupp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nilai_cukup"
                    android:contentDescription="@string/nilai_cukupp"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/main_label_for_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_apps_identity"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/label_for_you"
                android:contentDescription="Untuk Anda"
                android:textSize="20sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/main_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_label_for_you"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tv_cukup"
            android:layout_width="305dp"
            android:layout_height="89dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/nilai_indeks_anda_sudah_cukup_atau_pas_pasan_namun_anda_bisa_kembangkan_dengan_rajin_melakukan_latihan_dan_belajar_agara_nilai_nya_memuaskan"
            android:textColor="@color/colorTextHeader"
            android:contentDescription="@string/nilai_indeks_anda_sudah_cukup_atau_pas_pasan_namun_anda_bisa_kembangkan_dengan_rajin_melakukan_latihan_dan_belajar_agar_nilai_nya_memuaskan"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Img_cukup"
            app:layout_constraintVertical_bias="0.06999999" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>