<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CukupBaikFragment">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/Imgve_cukupbaik"
            android:layout_width="257dp"
            android:layout_height="265dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:srcCompat="@drawable/cukupbaik"
            android:contentDescription="@string/ini_nilai_sudah_cukup_baiik" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/main_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_apps_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_identity"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_rounded_card_blue"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/tv_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selamat_anda_memiliki"
                    android:contentDescription="Selamat anda memiliki"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_cukupBaik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="Nilai Cukup Baik"
                    android:text="@string/nilai_cukupbaik"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/main_label_for_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_apps_identity"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/label_for_you"
                android:textSize="20sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/main_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_label_for_you"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tv_cukupbaik"
            android:layout_width="305dp"
            android:layout_height="89dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dalam_prestasi_anda_cukup_baik_tingkatan_latihan_dan_sering_implementasikan_materi_yang_diajarkan_agar_bisa_mendapatkan_nilai_yang_sangat_baik"
            android:textColor="@color/colorTextHeader"
            android:textSize="16sp"
            android:contentDescription="@string/dalam_prestasi_anda_cukup_baik_tingkatan_latihan_dan_sering_implementasikan_materi_yang_diajarkan_agar_bisa_mendapatkan_nilai_yang_sangat_baikk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Imgve_cukupbaik"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>