<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SangatBaikFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/Imgve_sangatbaik"
            android:layout_width="257dp"
            android:layout_height="265dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintVertical_bias="0.19999999"
            app:srcCompat="@drawable/sangatbaik"
            android:contentDescription="@string/ini_nilai_yang_sangat_baik" />

        <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    <LinearLayout
        android:id="@+id/main_identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_apps_identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_identity"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_rounded_card_blue"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selamat_anda_memiliki"
            android:contentDescription="Selamat Anda Memiliki"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_sgtbaik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nilai_sangat_baik"
            android:contentDescription="Nilai Sangat Baik"
            android:textColor="@color/colorText"
            android:textSize="16sp" />


    </LinearLayout>

        <TextView
            android:id="@+id/main_label_for_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_apps_identity"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/label_for_you"
            android:textSize="20sp"
            android:contentDescription="Untuk Anda"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/main_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_label_for_you"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp" />


    </RelativeLayout>
        <TextView
            android:id="@+id/tv_sangatbaik"
            android:layout_width="309dp"
            android:layout_height="62dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/tingkatkan_dan_pertahankan_prestasi_belajar_anda_sebagai_wadah_ilmu_yang_bermanfaat"
            android:textColor="@color/colorTextHeader"
            android:textSize="16sp"
            android:contentDescription="tingkatkan dan pertahankan prestasi belajar anda sebagai wadah ilmu yang bermanfaat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Imgve_sangatbaik"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>