<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TidakBaikFragment">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/Img_tidakbaik"
            android:layout_width="257dp"
            android:layout_height="265dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:srcCompat="@drawable/tidakbaik"
            android:contentDescription="@string/ini_nilai_tidak_baik" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/main_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_apps_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_identity"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_rounded_card_blue"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/tv_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selamat_anda_memiliki"
                    android:contentDescription="Selamat Anda Memiliki"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_tidakbaik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nilai_tidakbaik"
                    android:textColor="@color/colorText"
                    android:contentDescription="Nilai Tidak Baik"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/main_label_for_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_apps_identity"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="Untuk Anda"
                android:text="@string/label_for_you"
                android:textSize="20sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/main_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_label_for_you"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tv_tidakbaikk"
            android:layout_width="305dp"
            android:layout_height="89dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/indeks_anda_nampaknya_kurang_memuaskan_dan_harus_mengulang_di_semester_depan_untuk_kedepanya_anda_harus_lebih_giat_belajar_lagi"
            android:textColor="@color/colorTextHeader"
            android:contentDescription="indeks anda nampaknya kurang memuaskan dan harus mengulang di semester depan untuk kedepanya anda harus lebih giat belajar lagi"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Img_tidakbaik"
            app:layout_constraintVertical_bias="0.06999999" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>